src/test/deca/context/invalid/intermediaire2/elseif/08condition_floatLiteral.deca
{
    if (3 < 2) {
        print("Trop petit !");
    } else if ( 1.1 ){
        print("Trop grand !");
    }
}